// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@top-navigation-bar/action * action/is last item check (false) 1`] = `
<StyleProvider
  mapping={
    Object {
      "TopNavigationBar": Object {
        "appearance": Object {
          "default": Object {
            "mapping": Object {
              "backgroundColor": "blue-primary",
              "height": 46,
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 4,
              "subtitle": Object {
                "color": "text-primary-inverse",
                "fontSize": 12,
                "fontWeight": "400",
              },
              "textAlign": "start",
              "title": Object {
                "color": "text-primary-inverse",
                "fontSize": 16,
                "fontWeight": "600",
              },
            },
          },
          "title-centered": Object {
            "mapping": Object {
              "textAlign": "center",
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
            "title-centered": Object {
              "default": false,
            },
          },
          "mapping": Object {
            "backgroundColor": Object {
              "type": "color",
            },
            "height": Object {
              "type": "number",
            },
            "paddingBottom": Object {
              "type": "number",
            },
            "paddingHorizontal": Object {
              "type": "number",
            },
            "paddingTop": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variants": Object {},
        },
      },
      "TopNavigationBarAction": Object {
        "appearance": Object {
          "default": Object {
            "mapping": Object {
              "height": 25,
              "marginRight": 8,
              "width": 25,
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "mapping": Object {
            "height": Object {
              "type": "number",
            },
            "marginRight": Object {
              "type": "number",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variants": Object {},
        },
      },
    }
  }
  styles={Object {}}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(createComponent)
    iconSource={
      Object {
        "uri": "https://pngimage.net/wp-content/uploads/2018/05/back-icon-png-6.png",
      }
    }
    isLastItem={false}
  />
</StyleProvider>
`;

exports[`@top-navigation-bar/action * action/is last item check (true) 1`] = `
<StyleProvider
  mapping={
    Object {
      "TopNavigationBar": Object {
        "appearance": Object {
          "default": Object {
            "mapping": Object {
              "backgroundColor": "blue-primary",
              "height": 46,
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 4,
              "subtitle": Object {
                "color": "text-primary-inverse",
                "fontSize": 12,
                "fontWeight": "400",
              },
              "textAlign": "start",
              "title": Object {
                "color": "text-primary-inverse",
                "fontSize": 16,
                "fontWeight": "600",
              },
            },
          },
          "title-centered": Object {
            "mapping": Object {
              "textAlign": "center",
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
            "title-centered": Object {
              "default": false,
            },
          },
          "mapping": Object {
            "backgroundColor": Object {
              "type": "color",
            },
            "height": Object {
              "type": "number",
            },
            "paddingBottom": Object {
              "type": "number",
            },
            "paddingHorizontal": Object {
              "type": "number",
            },
            "paddingTop": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variants": Object {},
        },
      },
      "TopNavigationBarAction": Object {
        "appearance": Object {
          "default": Object {
            "mapping": Object {
              "height": 25,
              "marginRight": 8,
              "width": 25,
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "mapping": Object {
            "height": Object {
              "type": "number",
            },
            "marginRight": Object {
              "type": "number",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variants": Object {},
        },
      },
    }
  }
  styles={Object {}}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(createComponent)
    iconSource={
      Object {
        "uri": "https://pngimage.net/wp-content/uploads/2018/05/back-icon-png-6.png",
      }
    }
    isLastItem={true}
  />
</StyleProvider>
`;

exports[`@top-navigation-bar/action * action/on press check 1`] = `
<StyleProvider
  mapping={
    Object {
      "TopNavigationBar": Object {
        "appearance": Object {
          "default": Object {
            "mapping": Object {
              "backgroundColor": "blue-primary",
              "height": 46,
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 4,
              "subtitle": Object {
                "color": "text-primary-inverse",
                "fontSize": 12,
                "fontWeight": "400",
              },
              "textAlign": "start",
              "title": Object {
                "color": "text-primary-inverse",
                "fontSize": 16,
                "fontWeight": "600",
              },
            },
          },
          "title-centered": Object {
            "mapping": Object {
              "textAlign": "center",
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
            "title-centered": Object {
              "default": false,
            },
          },
          "mapping": Object {
            "backgroundColor": Object {
              "type": "color",
            },
            "height": Object {
              "type": "number",
            },
            "paddingBottom": Object {
              "type": "number",
            },
            "paddingHorizontal": Object {
              "type": "number",
            },
            "paddingTop": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variants": Object {},
        },
      },
      "TopNavigationBarAction": Object {
        "appearance": Object {
          "default": Object {
            "mapping": Object {
              "height": 25,
              "marginRight": 8,
              "width": 25,
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "mapping": Object {
            "height": Object {
              "type": "number",
            },
            "marginRight": Object {
              "type": "number",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variants": Object {},
        },
      },
    }
  }
  styles={Object {}}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(createComponent)
    iconSource={
      Object {
        "uri": "https://pngimage.net/wp-content/uploads/2018/05/back-icon-png-6.png",
      }
    }
    onPress={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  />
</StyleProvider>
`;

exports[`@top-navigation-bar/action * action/with icon uri 1`] = `
<StyleProvider
  mapping={
    Object {
      "TopNavigationBar": Object {
        "appearance": Object {
          "default": Object {
            "mapping": Object {
              "backgroundColor": "blue-primary",
              "height": 46,
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 4,
              "subtitle": Object {
                "color": "text-primary-inverse",
                "fontSize": 12,
                "fontWeight": "400",
              },
              "textAlign": "start",
              "title": Object {
                "color": "text-primary-inverse",
                "fontSize": 16,
                "fontWeight": "600",
              },
            },
          },
          "title-centered": Object {
            "mapping": Object {
              "textAlign": "center",
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
            "title-centered": Object {
              "default": false,
            },
          },
          "mapping": Object {
            "backgroundColor": Object {
              "type": "color",
            },
            "height": Object {
              "type": "number",
            },
            "paddingBottom": Object {
              "type": "number",
            },
            "paddingHorizontal": Object {
              "type": "number",
            },
            "paddingTop": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variants": Object {},
        },
      },
      "TopNavigationBarAction": Object {
        "appearance": Object {
          "default": Object {
            "mapping": Object {
              "height": 25,
              "marginRight": 8,
              "width": 25,
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "mapping": Object {
            "height": Object {
              "type": "number",
            },
            "marginRight": Object {
              "type": "number",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variants": Object {},
        },
      },
    }
  }
  styles={Object {}}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(createComponent)
    iconSource={
      Object {
        "uri": "https://pngimage.net/wp-content/uploads/2018/05/back-icon-png-6.png",
      }
    }
  />
</StyleProvider>
`;

exports[`@top-navigation-bar/action * bar/appearance: title-centered 1`] = `
<StyleProvider
  mapping={
    Object {
      "TopNavigationBar": Object {
        "appearance": Object {
          "default": Object {
            "mapping": Object {
              "backgroundColor": "blue-primary",
              "height": 46,
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 4,
              "subtitle": Object {
                "color": "text-primary-inverse",
                "fontSize": 12,
                "fontWeight": "400",
              },
              "textAlign": "start",
              "title": Object {
                "color": "text-primary-inverse",
                "fontSize": 16,
                "fontWeight": "600",
              },
            },
          },
          "title-centered": Object {
            "mapping": Object {
              "textAlign": "center",
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
            "title-centered": Object {
              "default": false,
            },
          },
          "mapping": Object {
            "backgroundColor": Object {
              "type": "color",
            },
            "height": Object {
              "type": "number",
            },
            "paddingBottom": Object {
              "type": "number",
            },
            "paddingHorizontal": Object {
              "type": "number",
            },
            "paddingTop": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variants": Object {},
        },
      },
      "TopNavigationBarAction": Object {
        "appearance": Object {
          "default": Object {
            "mapping": Object {
              "height": 25,
              "marginRight": 8,
              "width": 25,
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "mapping": Object {
            "height": Object {
              "type": "number",
            },
            "marginRight": Object {
              "type": "number",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variants": Object {},
        },
      },
    }
  }
  styles={Object {}}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(createComponent)
    appearance="title-centered"
    title="Test"
  />
</StyleProvider>
`;

exports[`@top-navigation-bar/action * bar/subtitle 1`] = `
<StyleProvider
  mapping={
    Object {
      "TopNavigationBar": Object {
        "appearance": Object {
          "default": Object {
            "mapping": Object {
              "backgroundColor": "blue-primary",
              "height": 46,
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 4,
              "subtitle": Object {
                "color": "text-primary-inverse",
                "fontSize": 12,
                "fontWeight": "400",
              },
              "textAlign": "start",
              "title": Object {
                "color": "text-primary-inverse",
                "fontSize": 16,
                "fontWeight": "600",
              },
            },
          },
          "title-centered": Object {
            "mapping": Object {
              "textAlign": "center",
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
            "title-centered": Object {
              "default": false,
            },
          },
          "mapping": Object {
            "backgroundColor": Object {
              "type": "color",
            },
            "height": Object {
              "type": "number",
            },
            "paddingBottom": Object {
              "type": "number",
            },
            "paddingHorizontal": Object {
              "type": "number",
            },
            "paddingTop": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variants": Object {},
        },
      },
      "TopNavigationBarAction": Object {
        "appearance": Object {
          "default": Object {
            "mapping": Object {
              "height": 25,
              "marginRight": 8,
              "width": 25,
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "mapping": Object {
            "height": Object {
              "type": "number",
            },
            "marginRight": Object {
              "type": "number",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variants": Object {},
        },
      },
    }
  }
  styles={Object {}}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(createComponent)
    subtitle="Subtitle"
    title="Test"
  />
</StyleProvider>
`;

exports[`@top-navigation-bar/action * bar/title 1`] = `
<StyleProvider
  mapping={
    Object {
      "TopNavigationBar": Object {
        "appearance": Object {
          "default": Object {
            "mapping": Object {
              "backgroundColor": "blue-primary",
              "height": 46,
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 4,
              "subtitle": Object {
                "color": "text-primary-inverse",
                "fontSize": 12,
                "fontWeight": "400",
              },
              "textAlign": "start",
              "title": Object {
                "color": "text-primary-inverse",
                "fontSize": 16,
                "fontWeight": "600",
              },
            },
          },
          "title-centered": Object {
            "mapping": Object {
              "textAlign": "center",
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
            "title-centered": Object {
              "default": false,
            },
          },
          "mapping": Object {
            "backgroundColor": Object {
              "type": "color",
            },
            "height": Object {
              "type": "number",
            },
            "paddingBottom": Object {
              "type": "number",
            },
            "paddingHorizontal": Object {
              "type": "number",
            },
            "paddingTop": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variants": Object {},
        },
      },
      "TopNavigationBarAction": Object {
        "appearance": Object {
          "default": Object {
            "mapping": Object {
              "height": 25,
              "marginRight": 8,
              "width": 25,
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "mapping": Object {
            "height": Object {
              "type": "number",
            },
            "marginRight": Object {
              "type": "number",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variants": Object {},
        },
      },
    }
  }
  styles={Object {}}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(createComponent)
    title="Test"
  />
</StyleProvider>
`;

exports[`@top-navigation-bar/action * bar/with actions 1`] = `
<StyleProvider
  mapping={
    Object {
      "TopNavigationBar": Object {
        "appearance": Object {
          "default": Object {
            "mapping": Object {
              "backgroundColor": "blue-primary",
              "height": 46,
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 4,
              "subtitle": Object {
                "color": "text-primary-inverse",
                "fontSize": 12,
                "fontWeight": "400",
              },
              "textAlign": "start",
              "title": Object {
                "color": "text-primary-inverse",
                "fontSize": 16,
                "fontWeight": "600",
              },
            },
          },
          "title-centered": Object {
            "mapping": Object {
              "textAlign": "center",
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
            "title-centered": Object {
              "default": false,
            },
          },
          "mapping": Object {
            "backgroundColor": Object {
              "type": "color",
            },
            "height": Object {
              "type": "number",
            },
            "paddingBottom": Object {
              "type": "number",
            },
            "paddingHorizontal": Object {
              "type": "number",
            },
            "paddingTop": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variants": Object {},
        },
      },
      "TopNavigationBarAction": Object {
        "appearance": Object {
          "default": Object {
            "mapping": Object {
              "height": 25,
              "marginRight": 8,
              "width": 25,
            },
          },
        },
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "mapping": Object {
            "height": Object {
              "type": "number",
            },
            "marginRight": Object {
              "type": "number",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "mobile",
          "states": Object {},
          "variants": Object {},
        },
      },
    }
  }
  styles={Object {}}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(createComponent)
    leftControl={
      <ActionMock
        iconSource={
          Object {
            "uri": "https://pngimage.net/wp-content/uploads/2018/05/back-icon-png-6.png",
          }
        }
        onPress={[MockFunction]}
        testID="@top-navbar-left"
      />
    }
    rightControls={
      Array [
        <ActionMock
          iconSource={
            Object {
              "uri": "https://pngimage.net/wp-content/uploads/2018/05/back-icon-png-6.png",
            }
          }
          onPress={[MockFunction]}
          testID="@top-navbar-right-1"
        />,
        <ActionMock
          iconSource={
            Object {
              "uri": "https://pngimage.net/wp-content/uploads/2018/05/back-icon-png-6.png",
            }
          }
          onPress={[MockFunction]}
          testID="@top-navbar-right-2"
        />,
        <ActionMock
          iconSource={
            Object {
              "uri": "https://pngimage.net/wp-content/uploads/2018/05/back-icon-png-6.png",
            }
          }
          onPress={[MockFunction]}
          testID="@top-navbar-right-3"
        />,
      ]
    }
    subtitle="Subtitle"
    title="Test"
  />
</StyleProvider>
`;
